--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,24 +14,23 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/mongo:3.4.4
 
-    working_directory: ~/server
+    working_directory: ./server
 
     steps:
       - checkout
 
+      - run: sudo npm install -g npm@latest
+
       # Download and cache dependencies
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
+      - restore_cache: # special step to restore the dependency cache 
+          key: dependency-cache-{{ checksum "package.json" }}
 
       - run: npm install
 
-      - save_cache:
+      - save_cache: # special step to save the dependency cache
+          key: dependency-cache-{{ checksum "package.json" }}
           paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+            - ./server/node_modules
         
       # run tests!
       - run: npm test
