--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,14 +23,18 @@ jobs:
 
       # Download and cache dependencies
       - restore_cache: # special step to restore the dependency cache 
-          key: dependency-cache-{{ checksum "package.json" }}
+          keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+
 
       - run: npm install
 
       - save_cache: # special step to save the dependency cache
-          key: dependency-cache-{{ checksum "package.json" }}
           paths:
-            - ~/react-express-starter/server/node_modules
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
         
       # run tests!
       - run: npm test
