--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,7 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/mongo:3.4.4
 
-    working_directory: ~/react-express-starter/server
-
+    working_directory: ~/repo
     steps:
       - checkout
 
@@ -33,7 +32,7 @@ jobs:
 
       - save_cache: # special step to save the dependency cache
           paths:
-            - node_modules
+            - ./server/node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
         
       # run tests!
