--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,10 +15,11 @@ jobs:
       # - image: circleci/mongo:3.4.4
 
     working_directory: ~/repo
+
     steps:
       - checkout
 
-      - run: sudo npm install -g npm@latest
+      - run: ls
 
       # Download and cache dependencies
       - restore_cache: # special step to restore the dependency cache 
@@ -26,7 +27,6 @@ jobs:
           - v1-dependencies-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-
 
       - run: npm install
 
