--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,8 @@ jobs:
 
       - run: ls
 
+      - run: cd server
+
       # Download and cache dependencies
       - restore_cache: # special step to restore the dependency cache 
           keys:
