--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,19 +23,19 @@ jobs:
 
       - run: cd server
 
-      # Download and cache dependencies
-      - restore_cache: # special step to restore the dependency cache 
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
+      # # Download and cache dependencies
+      # - restore_cache: # special step to restore the dependency cache 
+      #     keys:
+      #     - v1-dependencies-{{ checksum "package.json" }}
+      #     # fallback to using the latest cache if no exact match is found
+      #     - v1-dependencies-
 
       - run: npm install
 
-      - save_cache: # special step to save the dependency cache
-          paths:
-            - ./server/node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+      # - save_cache: # special step to save the dependency cache
+      #     paths:
+      #       - ./server/node_modules
+      #     key: v1-dependencies-{{ checksum "package.json" }}
         
       # run tests!
       - run: npm test
