--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,26 +19,6 @@ jobs:
     steps:
       - checkout
 
-      - run: ls
-
-      - run: cd server
-
-      - run: ls
-      # # Download and cache dependencies
-      # - restore_cache: # special step to restore the dependency cache 
-      #     keys:
-      #     - v1-dependencies-{{ checksum "package.json" }}
-      #     # fallback to using the latest cache if no exact match is found
-      #     - v1-dependencies-
-
-      - run: npm install
-
-      # - save_cache: # special step to save the dependency cache
-      #     paths:
-      #       - ./server/node_modules
-      #     key: v1-dependencies-{{ checksum "package.json" }}
-        
-      # run tests!
-      - run: npm test
+      - run: circle
 
 
